Fix: Dockerfile fetch folder

--- a/medusa-backend/Dockerfile
+++ b/medusa-backend/Dockerfile
@@ -2,12 +2,11 @@ FROM node:18
 
 WORKDIR /app
 
-COPY ../medusa-backend/package.json .
-COPY ../medusa-backend/yarn.lock .
-RUN yarn install
+COPY medusa-backend/package.json .  
+COPY medusa-backend/yarn.lock .  
+RUN yarn install  
 
-COPY ../medusa-backend .
+COPY medusa-backend/ .  
 
 EXPOSE 9000
-
 CMD ["yarn", "start"]
