Feat: added .en

--- a/medusa-backend/.env
+++ b/medusa-backend/.env
@@ -8,4 +8,4 @@ COOKIE_SECRET=supersecret
 DATABASE_URL=postgres://postgres:clear@localhost/medusa-medusa-backend
 MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=medusa-backend-storefront
 
-DATABASE_URL=postgres://medusa:clear@192.168.1.110:5432/medusa
+DATABASE_URL=postgres://postgres:clear@192.168.1.110:5432/medusa
