Fix: added new env for DB. dockerfile yarn version issue fixed

--- a/medusa-backend/.env
+++ b/medusa-backend/.env
@@ -8,4 +8,4 @@ COOKIE_SECRET=supersecret
 DATABASE_URL=postgres://postgres:clear@localhost/medusa-medusa-backend
 MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=medusa-backend-storefront
 
-DATABASE_URL=postgres://postgres:postgres@medusa-db.catigkm00gyz.us-east-1.rds.amazonaws.com:5432/medusa-db
+DATABASE_URL=postgresql://postgres:postgres@medusa-db.catigkm00gyz.us-east-1.rds.amazonaws.com:5432/medusa-db
