--- a/medusa-backend/Dockerfile
+++ b/medusa-backend/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 
 COPY package.json yarn.lock ./
 
+RUN corepack enable && corepack prepare yarn@4.8.1 --activate
+
 RUN yarn install
 
 COPY . .
