Fix: Redis error fixed

--- a/medusa-backend/.env
+++ b/medusa-backend/.env
@@ -2,10 +2,16 @@ MEDUSA_ADMIN_ONBOARDING_TYPE=nextjs
 STORE_CORS=http://localhost:8000,https://docs.medusajs.com
 ADMIN_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
 AUTH_CORS=http://localhost:5173,http://localhost:9000,http://localhost:8000,https://docs.medusajs.com
-REDIS_URL=redis://localhost:6379
+
+# Disable Redis
+REDIS_URL=null
+
+# Secrets
 JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
-DATABASE_URL=postgres://postgres:clear@localhost/medusa-medusa-backend
-MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=medusa-backend-storefront
 
+# PostgreSQL Database Connection
 DATABASE_URL=postgresql://postgres:postgres@medusa-db.catigkm00gyz.us-east-1.rds.amazonaws.com:5432/medusa-db
+
+# Admin Next.js Storefront Directory (Only if needed)
+MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=medusa-backend-storefront
