Fix: Disabled dockerfile to Exclude Admin Panel

--- a/medusa-backend/Dockerfile
+++ b/medusa-backend/Dockerfile
@@ -4,12 +4,13 @@ WORKDIR /app
 
 COPY package.json yarn.lock ./
 
-RUN corepack enable && corepack prepare yarn@4.8.1 --activate
-
 RUN yarn install
 
 COPY . .
 
 EXPOSE 9000
+
+# Disable Medusa Admin UI
+ENV MEDUSA_FF_DISABLE_ADMIN=true
 
 CMD ["yarn", "start"]
