--- a/medusa-backend/.env
+++ b/medusa-backend/.env
@@ -15,3 +15,5 @@ DATABASE_URL=postgresql://postgres:postgres@medusa-db.catigkm00gyz.us-east-1.rds
 
 # Admin Next.js Storefront Directory (Only if needed)
 MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=medusa-backend-storefront
+
+MEDUSA_FF_DISABLE_ADMIN=true
