feat: add initial Terraform configuration for backend deployment

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,28 @@ build
 !.yarn/versions
 
 .medusa
+
+
+# Terraform data
+.terraform/
+
+# Ignore Terraform state files
+*.tfstate
+*.tfstate.*
+
+# Ignore crash logs
+crash.log
+
+# Ignore variable override files (often contain secrets)
+*.tfvars
+*.tfvars.json
+
+# Ignore plan files
+*.plan
+
+# Ignore backup files
+*.backup
+
+# Ignore CLI config files
+.terraformrc
+terraform.rc
