--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -21,17 +21,16 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          IMAGE_TAG="rameshxt/medusa-backend:v1.0.${GITHUB_SHA}"
+          IMAGE_TAG="rameshxt/medusa-backend:v1.0.${ github.sha }"
           docker build -t $IMAGE_TAG .
 
       - name: Update ECS Image Tag in ecs.tf
         run: |
-          chmod +x image-updater.sh
-          /medusa-store/image-updater.sh "rameshxt/medusa-backend:v1.0.${GITHUB_SHA}"
+          bash /medusa-store/image-updater.sh "rameshxt/medusa-backend:v1.0.${{ github.sha }}"
 
       - name: Push Docker Image to Docker Hub
         run: |
-          docker push "rameshxt/medusa-backend:v1.0.${GITHUB_SHA}"
+          docker push "rameshxt/medusa-backend:v1.0.${ github.sha }"
 
       - name: Deploy to ECS using Terraform
         run: |
