--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -21,16 +21,16 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          IMAGE_TAG="rameshxt/medusa-backend:v1.0.${ github.sha }"
+          IMAGE_TAG="rameshxt/medusa-backend:v1.0.${GITHUB_SHA}"
           docker build -t $IMAGE_TAG .
 
       - name: Update ECS Image Tag in ecs.tf
         run: |
-          bash /medusa-store/image-updater.sh "rameshxt/medusa-backend:v1.0.${{ github.sha }}"
+          bash /medusa-store/image-updater.sh "rameshxt/medusa-backend:v1.0.${GITHUB_SHA}"
 
       - name: Push Docker Image to Docker Hub
         run: |
-          docker push "rameshxt/medusa-backend:v1.0.${ github.sha }"
+          docker push "rameshxt/medusa-backend:v1.0.${GITHUB_SHA}"
 
       - name: Deploy to ECS using Terraform
         run: |
