--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -21,16 +21,16 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          IMAGE_TAG="rameshxt/medusa-backend:v1.0.${GITHUB_SHA}"
+          IMAGE_TAG="rameshxt/medusa-backend:v1.0.${github.run_number}"
           docker build -t $IMAGE_TAG .
 
       - name: Update ECS Image Tag in ecs.tf
         run: |
-          bash image-updater.sh "rameshxt/medusa-backend:v1.0.${GITHUB_SHA}"
+          bash image-updater.sh "rameshxt/medusa-backend:v1.0.${github.run_number}"
 
       - name: Push Docker Image to Docker Hub
         run: |
-          docker push "rameshxt/medusa-backend:v1.0.${GITHUB_SHA}"
+          docker push "rameshxt/medusa-backend:v1.0.${github.run_number}"
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
