--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -21,16 +21,17 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          IMAGE_TAG="rameshxt/medusa-backend:v1.0.${ github.run_number }"
+          IMAGE_TAG="rameshxt/medusa-backend:v1.0.${GITHUB_RUN_NUMBER}"
+          echo "Building image with tag: $IMAGE_TAG"
           docker build -t $IMAGE_TAG .
 
       - name: Update ECS Image Tag in ecs.tf
         run: |
-          bash image-updater.sh "rameshxt/medusa-backend:v1.0.${ github.run_number }"
+          bash image-updater.sh "rameshxt/medusa-backend:v1.0.${GITHUB_RUN_NUMBER}"
 
       - name: Push Docker Image to Docker Hub
         run: |
-          docker push "rameshxt/medusa-backend:v1.0.${ github.run_number }"
+          docker push "rameshxt/medusa-backend:v1.0.${GITHUB_RUN_NUMBER}"
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
