--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "checkJs": false,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "strict": true
   },
   "ts-node": {
     "swc": true
