--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -3,51 +3,78 @@ name: Medusa CD Pipeline
 on:
   push:
     branches:
-      - master
+      - work
 
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: Checkout Code
+      - name: CODE CHECKOUT
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
+      - name: SET UP DOCKER BUILDx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
-        run: echo ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - name: LOGIN DOCKER HUB
+        run: |
+          echo "Logging into Docker Hub.."
+          echo ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          echo "Logged in to Docker Hub."
 
-      - name: Build Docker Image
+      - name: BUILD DOCKER IMAGE
         run: |
           IMAGE_TAG="rameshxt/medusa-backend:v1.0.${GITHUB_RUN_NUMBER}"
-          echo "Building image with tag: $IMAGE_TAG"
+          echo "Building Docker image with tag: $IMAGE_TAG"
           docker build -t $IMAGE_TAG .
+          echo "Image build complete."
 
-      - name: Push Docker Image to Docker Hub
+      - name: PUSH DOCKER IMAGES..
         run: |
-          docker push "rameshxt/medusa-backend:v1.0.${GITHUB_RUN_NUMBER}"
+          IMAGE_TAG="rameshxt/medusa-backend:v1.0.${GITHUB_RUN_NUMBER}"
+          echo "Pushing Docker image: $IMAGE_TAG"
+          docker push "$IMAGE_TAG"
+          echo "Image pushed to Docker Hub."
 
-      - name: Update ECS Image Tag in ecs.tf
+      - name: UPDATE IMAGE TAG IN ecs.tf
         run: |
-          bash image-updater.sh "rameshxt/medusa-backend:v1.0.${GITHUB_RUN_NUMBER}"
+          IMAGE_TAG="rameshxt/medusa-backend:v1.0.${GITHUB_RUN_NUMBER}"
+          echo "Updating image tag in ecs.tf with: $IMAGE_TAG"
+          bash image-updater.sh "$IMAGE_TAG"
+          echo "ecs.tf updated successfully."
 
-      - name: Install Terraform
+      - name: INSTALL TERRAFORM
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_wrapper: false
           terraform_version: latest
 
-      - name: Configure AWS credentials
+      - name: CONFIGURE AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Deploy to ECS using Terraform
+      - name: DEPLOY TO AWS ECS USING TERRAFORM
         run: |
+          echo "Starting Terraform deployment.."
           cd terraform
           terraform init
+          echo "Terraform initialized."
+
+          terraform validate
+          echo "Terraform configuration validated."
+
+          terraform plan
+          echo "Terraform plan generated."
+
           terraform apply -auto-approve
+          echo "Infrastructure deployed to AWS ECS."
+
+      - name: PRINT ALB DNS NAME
+        run: |
+          cd terraform
+          ALB_URL=$(terraform output -raw alb_dns_name)
+          echo "🎉 Medusa backend deployed successfully!"
+          echo "🌐 Access it here: http://${ALB_URL}/app"
